--- a/Day03/02_기본레이아웃/css/style.css
+++ b/Day03/02_기본레이아웃/css/style.css
@@ -1,6 +1,6 @@
 /* TODO : 여기에 코드를 작성해보세요:)  */
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@700&family=Noto+Sans+KR:wght@400;700&display=swap');
 
 /* reset */
 * {margin: 0;padding: 0;}
@@ -12,7 +12,7 @@ img{vertical-align: middle;}
 
 
 /* layout */
-.font{font-family: 'Nanum Myungjo', serif;}
+.font{font-family: 'Nanum Myeongjo', serif;}
 body{font-family: 'Noto Sans KR', sans-serif; font-size: 16px; color: rgb(197, 197, 197);}
 .wrap{width: 100%; margin: 0; overflow: hidden;}
 
@@ -27,4 +27,151 @@ nav a{float: left; display: block; color: #f2f2f2; text-align: center; text-deco
 
 nav a:hover{background-color: #ddd; color:#000;}
 
-img {width: 100%;}
+/* section visual */
+section.visual{width: 100%; position:relative; margin-top: 51px;}
+section.visual img{width: 100%;}
+section.visual .maintitle{
+    position: absolute;
+    left: 50%;
+    top:20%;
+    transform: translate(-50%);
+    text-align: center;
+    color: #FFF;}
+section.visual .maintitle h2 {
+    font-size: 55px;
+    letter-spacing: -3px;
+    text-transform: uppercase;
+    margin-bottom: 10px;}
+
+section.visual .maintitle p {
+        font-size: 19px;
+        color: #ddd;
+    }
+section.visual .maintitle h2 span {
+    color: rgb(170, 72, 72);
+}
+
+/* section,routine */
+.inner{width: 1050px; margin: 0 auto;}
+
+section.routine {width: 100%; padding: 100px 0;}
+section.routine .inner {overflow: hidden;}
+section.routine .inner .title {
+    text-align: center;
+    color: rgb(39, 82, 48);
+    font-family: 'Nanum Myeongjo',serif;}
+
+section.routine .inner .title h2 {
+    font-size: 50px;
+    line-height: 1.4;
+    margin-bottom: 20px;
+}
+section.routine .inner .title h2 span {
+    display: block;
+    font-size: 25px;
+    margin-bottom: 20px;
+}
+section.routine .inner .title p {
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(63, 63, 63);
+    display: inline-block;
+    margin-bottom: 80px;
+    padding: 0 20px;
+    position: relative;
+}
+
+/* 가상선택자를 이용한 before, after 라인  */
+section.routine .inner .title p:before {
+    content: '';
+    width: 2px;
+    height: 18px;
+    background: #ccc;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    margin-top: -9px;
+}
+section.routine .inner .title p:after {
+    content: '';
+    width: 2px;
+    height: 18px;
+    background: #ccc;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-top: -9px;
+}
+
+section.routine .inner p.img {width: 50%; float: left;}
+section.routine .inner p.img img {width: 100%;}
+section.routine .inner ul {width: 50%; float: right; padding-left: 100px; box-sizing: border-box;}
+section.routine .inner ul li {
+    margin-bottom: 30px;
+    line-height: 1.4;
+    padding-left: 70px;
+    position: relative;
+}
+section.routine .inner ul li:before {
+    content: '1';
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 50px;
+    font-family: 'Nanum Myeongjo',serif;
+    color: #6F8668;
+}
+section.routine .inner ul li:nth-child(2):before {content: '2';}
+section.routine .inner ul li:nth-child(3):before {content: '3';}
+
+section.routine .inner ul li h3 {
+    font-size: 24px;
+    color: #222;
+    font-weight: normal;
+    margin-bottom: 10px;
+}
+
+/* section.problems */
+section.problems {width: 100%; padding: 80px 0; text-align: center; background: #f9f9f9;}
+section.problems .inner .title {margin-bottom: 30px; color: #333;}
+section.problems .inner .title h2 {font-size: 30px; text-transform: uppercase; margin-bottom: 15px;}
+section.problems .inner .title p {font-size: 20px;}
+
+section.problems .inner ul {width: 100%; overflow: hidden;}
+section.problems .inner ul li {float: left; width: 25%; text-align: center;}
+section.problems .inner ul li .icon {margin: 0 auto 20px;}
+section.problems .inner ul li h3 {font-size: 14px; font-weight: 400;}
+
+/* section.detail */
+
+section.detail {width: 100%; padding: 80px 0;}
+section.detail .inner h2 {font-size: 30px; margin-bottom: 15px; color: #333; }
+section.detail .inner table {width: 100%; border-top: 2px solid #eee;}
+section.detail .inner table td {
+        padding: 12px 20px;
+        box-sizing: border-box;
+        font-size: 14px;
+        border-bottom: 1px solid #eee;
+        width: 350px;
+}
+section.detail .inner table td.title{
+    background: #f9f9f9;
+    width: 175px;
+    text-align: center;
+}
+
+/* footer */
+
+footer {
+    background: rgb(109, 75, 75);
+    color: #FFF;
+    text-align: center;
+    padding: 30px;
+    box-sizing: border-box;
+    font-size: 12px;
+}
+
+
+
+
+
