--- a/Day04/01_header/css/02_header_opacity.css
+++ b/Day04/01_header/css/02_header_opacity.css
@@ -54,5 +54,37 @@ header .menuOpen span {
 header .menuOpen span.mid {top: 50%;}
 header .menuOpen span.bot {top: 100%;}
 
+header .book {
+    display: inline-block;
+    float: left;
+    margin-left: 70px;
+    height: 100%;
+    font-size: 25px;}
+header .langs {
+    float: left;
+    margin-left: 220px;
+    width: 150px;
+    overflow: hidden;
+}
+header .langs li {
+    float: left;
+    width: 50%;
+}
+header .langs li:nth-child(1) {
+    font-weight: bold;
+}
+header .langs li:nth-child(2) {
+    color: #ddd;
+}
+header .langs li a {
+    display: block;
+    padding: 0 30px;
+    box-sizing: border-box;
+    text-transform: uppercase;
+}
+header .right {float: right;}
+header .right li{float: left; margin-right: 55px;}
+
+img {width: 100%;}
 
 
