--- a/Day05/01_flex/css/01_flex.css
+++ b/Day05/01_flex/css/01_flex.css
@@ -1,70 +1,91 @@
 
-.container{
+.container {
     width: 1200px;
     margin: 0 auto;
-    border: 3px dashed pink;
+    border: 3px dashed hotpink;
 }
-
-.flex-container{
+ /* container & item */
+.flex-container {
     display: flex;
     border: 1px solid lightcoral;
 }
 
-.item{
+.item {
     width: 100px;
     height: 100px;
-    padding: 20px;
     margin: 20px;
+    padding: 20px;
     font-size: 30px;
-    line-height: 60px;
     text-align: center;
-    background: lightskyblue;
-    color: #fff;
+    line-height: 60px;
+    background: royalblue;
+    color: white;
     box-sizing: border-box;
 }
 
+
+/* flex-direction */
 .row {
-    flex-direction: row;
+    flex-direction: row;  /* default */
 }
 
-.column{
+.column {
     flex-direction: column;
 }
 
-.row-reverse{
-    flex-direction:row-reverse;
+.row-reverse {
+    flex-direction: row-reverse;
 }
 
-.column-reverse{
+.column-reverse {
     flex-direction: column-reverse;
 }
 
-.nowrap{
+
+/* flex-wrap */
+.nowrap {
     flex-wrap: nowrap;
 }
 
-.wrap{
+.wrap {
     flex-wrap: wrap;
 }
 
-.wrap-reverse{
+.wrap-reverse {
     flex-wrap: wrap-reverse;
 }
 
-.row-wrap {
-    flex-wrap: row wrap;
+/* flex-flow */
+.row-wrap  {
+    flex-flow: row wrap;
 }
 
 
-.center{justify-content: center;}
-.start{justify-content: flex-start;}
-.end{justify-content: flex-end;}
-.between{justify-content: space-between;}
-.around{justify-content: space-around;}
+/* justify-content */
+.center { justify-content: center; }
+.start { justify-content: flex-start; }
+.end { justify-content: flex-end; }
+.between { justify-content: space-between; }
+.around { justify-content: space-around; }
 
 
-.cross{height: 400px;}
-.cross-center{align-items: center;}
-.cross-start{align-items: flex-start;}
-.cross-end{align-items: flex-end;}
-.cross-stretch{align-items: stretch;}
+/* align-items */
+.cross { height: 400px; }
+.cross-center{ align-items: center; }
+.cross-start{ align-items: flex-start;}
+.cross-end{ align-items: flex-end;}
+.cross-strech{ align-items: stretch;} /* stretch: auto로 적용되어야 가능 */
+
+/* align-content */
+.content-stretch {align-content: stretch; }
+.content-start {align-content: flex-start; flex-wrap:wrap;}
+.content-end {align-content: flex-end;  flex-wrap:wrap;}
+.content-center {align-content: center;  flex-wrap:wrap;}
+.content-between {align-content: space-between;  flex-wrap:wrap;}
+.content-around {align-content: space-around;  flex-wrap:wrap;}
+
+
+
+
+
+
