--- a/login/css/login.css
+++ b/login/css/login.css
@@ -63,12 +63,14 @@ body {
     margin: 30px 0;
 }
 
-
+label {
+    margin-right: 30px;
+}
 /* 아이디저장/자동로그인 글자에 왼쪽 패딩과 아랫쪽 마진을 줌 */
 .input_check {  
     display: inline-block;
     position: relative;
-    padding-left: 35px;
+    padding-left: 28px;
     margin-bottom: 12px;
     /* 커서는 체크박스에 마우스가 가면 손가락으로 가리키는 모양으로 바뀜 */
     cursor: pointer;
